--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
+    <script src="./config/config.js"></script>
 </head>
 
 <body>
